[#913729] editor and embed now no longer use media queries, and ensure aspect ratio, so everything is always visible. Still need something like this or a solution for make-valet land.

--- a/public/css/embed.less
+++ b/public/css/embed.less
@@ -48,9 +48,11 @@ body {
 }
 
 .container {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 41px;
   z-index: @videoZIndex;
 }
 
