--- a/public/css/tray.less
+++ b/public/css/tray.less
@@ -26,7 +26,7 @@
   height: @TRAY_HEIGHT;
 
   &.butter-tray-minimized {
-    bottom: -@TRAY_HEIGHT + @_butterStatusHeight;
+    bottom: -@TRAY_HEIGHT + @CONTROLS_HEIGHT;
   }
 
   &.butter-tray-transitions {
@@ -43,7 +43,7 @@
   .butter-timeline-area {
     position: relative;
     height: 160px;
-    top: @_butterStatusHeight;
+    top: @CONTROLS_HEIGHT;
   }
 
   // This is the container for the spinning popcorn logo on the right side of the tray
