--- a/public/templates/basic/style.less
+++ b/public/templates/basic/style.less
@@ -5,45 +5,24 @@
    ========================================================================== */
 
 .wrapper {
-  @media @small {
-    width: @small-w-px;
-  }
-  @media @medium {
-    width: @medium-w-px;
-  }
-  @media @large {
-    width: @large-w-px;
-  }
-  @media @xlarge {
-    width: @xlarge-w-px;
-  }
-  .butter-header-spacing & {
-    @media @small-in-editor {
-      width: @small-w-px;
-    }
-    @media @medium-in-editor {
-      width: @medium-w-px;
-    }
-    @media @large-in-editor {
-      width: @large-w-px;
-    }
-    @media @xlarge-in-editor {
-      width: @xlarge-w-px;
-    }
-  }
   border: 15px solid #FFF;
-  margin: 40px auto;
   box-shadow: 0 0 0 1px #CCC,
     0 25px 5px -20px rgba( 0, 0, 0, 0.5 );
 }
 
 /* body-wrapper required to circumvent this bug in webkit: https://bugs.webkit.org/show_bug.cgi?id=77811 */
-.butter-header-spacing .body-wrapper {
+.body-wrapper {
   position: absolute;
   left: 0;
   top: 62px; /* compensate for header */
-  right: 350px;
-  bottom: 0;
+  .editor-open & {
+    right: @EDITOR_WIDTH;
+  }
+  right: 0;
+  .tray-minimized & {
+    bottom: @CONTROLS_HEIGHT;
+  }
+  bottom: @TRAY_HEIGHT;
   -webkit-transition: right 0.25s;
   -moz-transition: right 0.25s;
   -ms-transition: right 0.25s;
